Add in a custom fail2ban finder for ASF
